Changed search logic

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
                     <div class="flex items-center gap-x-3">
                       <input oninput="" id="cam" name="cam" type="checkbox" class="h-4 w-4 border-gray-300 text-indigo-600 focus:ring-indigo-600">
-                      <label for="cam" class="block text-sm font-medium leading-6 text-gray-900">480p</label>
+                      <label for="cam" class="block text-sm font-medium leading-6 text-gray-900">CAMs (CAM, TS, etc.)</label>
                     </div>
 
                   </div>
