Initial premiumize support

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <form style="background-color: rgba(255,255,255,0.68);padding: 2rem;border-radius: 1rem">
             <img src="https://user-images.githubusercontent.com/27040483/28728094-99f3e3f6-73c7-11e7-8f8d-28912dc6ac0d.png" alt="logo" style="width: 100px;height: 100px;">
           <div class="space-y-12">
-              <p style="text-align: center">Stremio-Jackett v3.0.10</p>
+              <p style="text-align: center">Stremio-Jackett v3.0.11</p>
               <h1 class="text-base font-semibold leading-7 text-gray-900" style="text-align: center;font-size: 2rem;">Addon configuration</h1>
 
 
@@ -67,6 +67,7 @@
                   <select onchange="" id="service" name="service" autocomplete="service" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:max-w-xs sm:text-sm sm:leading-6">
                     <option value="realdebrid">Real-Debrid</option>
                     <option value="alldebrid">All-Debrid</option>
+                    <option value="premiumize">Premiumize</option>
                   </select>
                 </div>
               </div>
