--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <input oninput="" id="cache" name="cache" value="cache" type="checkbox" class="h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-600" checked>
             </div>
             <div class="text-sm leading-6">
-                <label for="sizedesc" class="font-medium text-gray-900">Enable cache</label>
+                <label for="cache" class="font-medium text-gray-900">Enable cache</label>
                 <p class="text-gray-500">Enable caching for faster results</p>
             </div>
         </div>
