Add base class for filters

--- a/source/index.html
+++ b/source/index.html
@@ -220,6 +220,13 @@
                                     TS, etc.)</label>
                             </div>
 
+                            <div class="flex items-center gap-x-3">
+                                <input oninput="" id="unknown" name="unknown" type="checkbox"
+                                       class="h-4 w-4 border-gray-300 text-indigo-600 focus:ring-indigo-600">
+                                <label for="unknown"
+                                       class="block text-sm font-medium leading-6 text-gray-900">Unknown</label>
+                            </div>
+
                             <div>
                                 <label for="exclusion-keywords"
                                        class="block text-sm font-medium leading-6 text-gray-900">Exclusion
