Add completion time to get_results endpoint Fix bug where quality was not shown if there weren't any quality specs Replace deprecated title in the streams response to description Fix torrent download being quoted when None

--- a/source/index.html
+++ b/source/index.html
@@ -586,7 +586,7 @@
             tmdbApi,
             cache
         };
-        if (jackettHost === '' || jackettApi === '' || debridApi === '' || tmdbApi === '' || languages.length == 0) {
+        if (jackettHost === '' || jackettApi === '' || debridApi === '' || tmdbApi === '' || languages.length === 0) {
             alert('Please fill all the fields');
             return false;
         }
